建立首頁登入帳戶資訊小視窗&登入頁面的使用者體驗

--- a/Vue_SPA/css/gheader.css
+++ b/Vue_SPA/css/gheader.css
@@ -117,8 +117,8 @@
 
 .g-header .g-wrap-expand .g-header-top .header-right {
   position: absolute;
-  top: 50%;
-  right: 0;
+  top: 23px;
+  right: 5px;
   -ms-flex-align: center;
       align-items: center;
   font-size: 14px;
@@ -148,8 +148,8 @@
 
 .g-header .g-wrap-expand .g-header-top .header-right .relative .Tab_User .image {
   overflow: hidden;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   border-radius: 30px;
   color: #49454b;
   font-weight: 400;
@@ -163,11 +163,11 @@
 }
 
 .g-header .g-wrap-expand .g-header-top .header-right .relative .Tab_User .image .badge_active {
-  left: 26px;
+  left: 40px;
   display: block;
   position: absolute;
   top: 2px;
-  padding: 2px 4px;
+  padding: 2.5px 5px;
   border-radius: 8px;
   line-height: 1;
   background: #f5548c;
@@ -177,11 +177,10 @@
 
 .g-header .g-wrap-expand .g-header-top .header-right .relative .Tab_User .user_menu {
   position: absolute;
-  top: 36px;
-  right: 0;
+  top: 50px;
+  right: 0px;
   z-index: 9999;
   visibility: hidden;
-  transition: visibility 0.2s, opacity 0.2s linear;
 }
 
 .g-header .g-wrap-expand .g-header-top .header-right .relative .Tab_User .user_menu:hover {
@@ -199,7 +198,7 @@
   display: flex;
   border: 1px solid #ebebeb;
   box-shadow: 0 8px 20px 10px rgba(41, 36, 45, 0.04);
-  padding-top: 24px;
+  padding-top: 14px;
   padding-bottom: 14px;
   background: #fff;
 }
@@ -222,9 +221,19 @@
   display: inline-block;
   vertical-align: middle;
   width: 28px;
+  position: absolute;
+  left: 30px;
   height: 28px;
   color: #49454b;
   cursor: pointer;
+}
+
+.g-header .g-wrap-expand .g-header-top .header-right .relative .Tab_User .user_menu .user_menu_container .menu_border_flexbox .user_list .title .my_mermbership:hover .Account {
+  color: #f5548c;
+}
+
+.g-header .g-wrap-expand .g-header-top .header-right .relative .Tab_User .user_menu .user_menu_container .menu_border_flexbox .user_list .title .my_mermbership .login_menu {
+  background-position: 0 0;
   display: inline-block;
   width: 28px;
   height: 28px;
@@ -232,12 +241,9 @@
   cursor: pointer;
 }
 
-.g-header .g-wrap-expand .g-header-top .header-right .relative .Tab_User .user_menu .user_menu_container .menu_border_flexbox .user_list .title .my_mermbership .login_menu {
-  background-position: 0 0;
-}
-
-.g-header .g-wrap-expand .g-header-top .header-right .relative .Tab_User .user_menu .user_menu_container .menu_border_flexbox .user_list .title .Account {
+.g-header .g-wrap-expand .g-header-top .header-right .relative .Tab_User .user_menu .user_menu_container .menu_border_flexbox .user_list .title .my_mermbership .Account {
   display: inline-block;
+  position: absolute;
   vertical-align: middle;
   line-height: 22px;
   margin-left: 6px;
@@ -245,15 +251,42 @@
   max-width: 170px;
   color: #49454b;
   cursor: pointer;
+  left: 40px;
+  top: 5px;
+}
+
+.g-header .g-wrap-expand .g-header-top .header-right .relative .Tab_User .user_menu .user_menu_container .menu_border_flexbox .user_list .title .my_mermbership .Account:hover {
+  color: #f5548c;
 }
 
 .g-header .g-wrap-expand .g-header-top .header-right .relative .Tab_User .user_menu .user_menu_container .menu_border_flexbox .user_list ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
   color: #49454b;
   font-weight: 400;
   line-height: 1.4;
+  margin: 0;
+  padding: 0;
+}
+
+.g-header .g-wrap-expand .g-header-top .header-right .relative .Tab_User .user_menu .user_menu_container .menu_border_flexbox .user_list ul li:nth-child(1) a {
+  margin-top: 35px;
+  margin-left: -60px;
+}
+
+.g-header .g-wrap-expand .g-header-top .header-right .relative .Tab_User .user_menu .user_menu_container .menu_border_flexbox .user_list ul li:nth-child(1) a .badge {
+  margin-left: 20px;
+  float: right;
+  padding: 2.5px 5px;
+  border-radius: 8px;
+  line-height: 1;
+  background: #f5548c;
+  color: #fff;
+  font-size: 12px;
+}
+
+.g-header .g-wrap-expand .g-header-top .header-right .relative .Tab_User .user_menu .user_menu_container .menu_border_flexbox .user_list ul a {
+  margin-top: 10px;
+  margin-left: -120px;
 }
 
 .g-header .g-wrap-expand .g-header-top .header-right a {
