--- a/Vue_SPA/css/login.css
+++ b/Vue_SPA/css/login.css
@@ -86,6 +86,7 @@
   text-align: center;
   font-size: 20px;
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
+  cursor: pointer;
 }
 
 .login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-fb::before {
@@ -122,7 +123,7 @@
   text-align: center;
   overflow: hidden;
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
-  z-index: 1;
+  cursor: pointer;
 }
 
 .login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weibo::before {
@@ -158,6 +159,7 @@
   font-size: 20px;
   overflow: hidden;
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
+  cursor: pointer;
 }
 
 .login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-twitter::before {
@@ -190,11 +192,11 @@
   color: #fff;
   border-radius: 8px 8px 8px 8px;
   background: #65b331;
-  z-index: 1;
   font-size: 20px;
   text-align: center;
   overflow: hidden;
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
+  cursor: pointer;
 }
 
 .login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .social-btn .inner-btn-wrapper .social-login-btn .m-button-weixin::before {
@@ -223,19 +225,16 @@
 .login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .prev-next {
   position: absolute;
   top: 180px;
-  right: 10%;
-  left: 10%;
   display: block;
-  height: 10%;
 }
 
 .login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .prev-next i[data-click="btn-next"] {
+  position: absolute;
   display: block;
-  float: right;
   width: 19px;
   height: 31px;
   cursor: pointer;
-  z-index: 999;
+  left: 500px;
   background: url(../src/image/img_login_next_white.png) right center no-repeat;
   background-size: 19px 31px;
 }
@@ -247,11 +246,11 @@
 
 .login-body .login-outer .login-wrapper-login .login-inner-wrapper .login-upper .prev-next i[data-click="btn-back"] {
   display: block;
-  float: left;
+  position: absolute;
   width: 19px;
   height: 31px;
   cursor: pointer;
-  z-index: 999;
+  left: 50px;
   background: url(../src/image/img_login_back_white.png) left center no-repeat;
   background-size: 19px 31px;
 }
@@ -276,70 +275,77 @@
 }
 
 .login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form ul {
+  max-width: 300px;
+  padding: 0 20px;
+  margin: 0 auto;
+  margin-top: 20px;
   position: relative;
-  display: block;
-  list-style-type: none;
+  list-style: none;
 }
 
 .login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form ul li {
   position: relative;
-  display: block;
-  width: 228px;
-  left: 17%;
+  display: list-item;
+  list-style: none;
 }
 
 .login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form ul li #login-id {
-  display: block;
-  width: inherit;
-  height: inherit;
-  padding: 18px 20px 17px 50px;
+  width: 100%;
+  padding: 17px 20px 17px 40px;
   border: 1px solid #ccc;
+  box-sizing: border-box;
   border-radius: 8px 8px 0 0;
   outline: none;
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
+  cursor: text;
 }
 
 .login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form ul li #id-input {
   position: absolute;
   color: #bbb;
-  left: 20px;
-  right: 12px;
+  left: 12px;
+  right: 0;
   top: 0;
   bottom: 3px;
   text-align: left;
-  padding: 18px 30px 15px 28px;
+  padding: 15px 30px 17px 35px;
   background-image: url(../src/image/img_login_account_icon.png);
   background-size: 21px 300px;
   background-repeat: no-repeat;
   background-position: 0 16px;
+  font-size: 16px;
+  cursor: default;
+  pointer-events: none;
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
 }
 
 .login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form ul li #login-password {
-  display: block;
-  width: inherit;
-  height: inherit;
+  width: 100%;
   border: 1px solid #ccc;
-  padding: 18px 20px 17px 50px;
+  padding: 17px 20px 17px 40px;
   border-radius: 0 0 8px 8px;
   outline: none;
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
+  box-sizing: border-box;
+  cursor: text;
 }
 
 .login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form ul li #password-input {
   position: absolute;
   color: #bbb;
-  left: 20px;
-  right: 12px;
+  left: 12px;
+  right: 0;
   top: 0;
-  bottom: 3px;
   text-align: left;
-  padding: 18px 30px 15px 28px;
+  padding: 15px 30px 17px 35px;
   background-image: url(../src/image/img_login_account_icon.png);
   background-size: 21px 300px;
   background-repeat: no-repeat;
   background-position: 0 -93px;
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
+  pointer-events: none;
+  font-size: 16px;
+  cursor: default;
 }
 
 .login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper #login-form .button-wrapper {
@@ -363,6 +369,8 @@
   border-radius: 8px 8px 8px 8px;
   border: none;
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
+  outline: none;
+  cursor: pointer;
 }
 
 .login-body .login-outer .login-wrapper-login .login-inner-wrapper .form-wrapper .login-help {
@@ -505,5 +513,51 @@
   background: #f7e5e5;
   text-align: center;
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
+}
+
+.Login_Account_alert:before {
+  display: block;
+  content: "";
+  border: 7px solid #db484a;
+  border-color: transparent #db484a transparent transparent;
+  position: absolute;
+  right: -6px;
+  top: 20px;
+}
+
+.Login_Account_alert:after {
+  content: attr(data-notice);
+  display: block;
+  background: #db484a;
+  color: #fff;
+  position: absolute;
+  top: 2px;
+  right: -116px;
+  padding: 12px 15px;
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+.Login_PassWord_alert:before {
+  display: block;
+  content: "";
+  border: 7px solid #db484a;
+  border-color: transparent #db484a transparent transparent;
+  position: absolute;
+  right: -6px;
+  top: 20px;
+}
+
+.Login_PassWord_alert:after {
+  content: attr(data-notice);
+  display: block;
+  background: #db484a;
+  color: #fff;
+  position: absolute;
+  top: 2px;
+  right: -116px;
+  padding: 11px 15px;
+  font-size: 16px;
+  border-radius: 5px;
 }
 /*# sourceMappingURL=login.css.map */
