--- a/Vue_SPA/src/scss/login.scss
+++ b/Vue_SPA/src/scss/login.scss
@@ -80,6 +80,8 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
                   text-align: center;
                   font-size: 20px;
                   font-family: $font-family;
+                  cursor: pointer;
+
                   &::before {
                     position: absolute;
                     top: 0;
@@ -88,7 +90,6 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
                     width: 50px;
                     height: 50px;
                     content: "";
-
                     border-right: 1px solid #617fbd;
                     background-image: url(../src/image/img_login_facebook_icon.png);
                     background-repeat: no-repeat;
@@ -97,7 +98,6 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
                   }
                   &:hover {
                     transform: translateY(-5px);
-
                     box-shadow: 0 0.3em #244279;
                     transition-duration: 0.15s;
                   }
@@ -115,7 +115,8 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
                   text-align: center;
                   overflow: hidden;
                   font-family: $font-family;
-                  z-index: 1;
+                  cursor: pointer;
+
                   &::before {
                     position: absolute;
                     top: 0;
@@ -124,7 +125,6 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
                     width: 51px;
                     height: 51px;
                     content: "";
-
                     border-radius: 8px 0px 0px 8px;
                     background-color: #d8d8d8;
                     background-image: url(../src/image/img_login_weibo_icon.png);
@@ -150,6 +150,8 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
                   font-size: 20px;
                   overflow: hidden;
                   font-family: $font-family;
+                  cursor: pointer;
+
                   &::before {
                     position: absolute;
                     top: 0;
@@ -158,7 +160,6 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
                     width: 50px;
                     height: 50px;
                     content: "";
-
                     border-right: 1px solid #53bae2;
                     background-image: url(../src/image/img_login_twitter_icon.png);
                     background-repeat: no-repeat;
@@ -181,11 +182,11 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
                   color: #fff;
                   border-radius: 8px 8px 8px 8px;
                   background: #65b331;
-                  z-index: 1;
                   font-size: 20px;
                   text-align: center;
                   overflow: hidden;
                   font-family: $font-family;
+                  cursor: pointer;
                   &::before {
                     position: absolute;
                     top: 0;
@@ -216,18 +217,18 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
           .prev-next {
             position: absolute;
             top: 180px;
-            right: 10%;
-            left: 10%;
+            //right: 10%;
+            //left: 10%;
             display: block;
-            height: 10%;
-
+            //height: 10%;
             i[data-click="btn-next"] {
+              position: absolute;
               display: block;
-              float: right;
+              //float: right;
               width: 19px;
               height: 31px;
               cursor: pointer;
-              z-index: 999;
+              left:500px;
               background: url(../src/image/img_login_next_white.png) right
                 center no-repeat;
               background-size: 19px 31px;
@@ -239,11 +240,12 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
             }
             i[data-click="btn-back"] {
               display: block;
-              float: left;
+              position: absolute;
+              //float: left;
               width: 19px;
               height: 31px;
               cursor: pointer;
-              z-index: 999;
+              left:50px;
               background: url(../src/image/img_login_back_white.png) left center
                 no-repeat;
               background-size: 19px 31px;
@@ -271,65 +273,71 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
               font-family: $font-family;
             }
             ul {
+              max-width: 300px;
+              padding: 0 20px;
+              margin: 0 auto;
+              margin-top:20px;
               position: relative;
-              display: block;
-              list-style-type: none;
+              list-style: none;
 
               li {
                 position: relative;
-                display: block;
-                width: 228px;
-                left: 17%;
-
+                display: list-item;
+                list-style: none;
                 #login-id {
-                  display: block;
-                  width: inherit;
-                  height: inherit;
-                  padding: 18px 20px 17px 50px;
+                  width: 100%;
+                  padding: 17px 20px 17px 40px;
                   border: 1px solid #ccc;
+                  box-sizing: border-box;
                   border-radius: 8px 8px 0 0;
                   outline: none;
                   font-family: $font-family;
+                  cursor: text;
                 }
                 #id-input {
                   position: absolute;
                   color: #bbb;
-                  left: 20px;
-                  right: 12px;
+                  left: 12px;
+                  right: 0;
                   top: 0;
                   bottom: 3px;
                   text-align: left;
-                  padding: 18px 30px 15px 28px;
+                  padding: 15px 30px 17px 35px;
                   background-image: url(../src/image/img_login_account_icon.png);
                   background-size: 21px 300px;
                   background-repeat: no-repeat;
                   background-position: 0 16px;
+                  font-size: 16px;
+                  cursor: default;
+                  pointer-events: none;
                   font-family: $font-family;
                 }
                 #login-password {
-                  display: block;
-                  width: inherit;
-                  height: inherit;
+                  width: 100%;
                   border: 1px solid #ccc;
-                  padding: 18px 20px 17px 50px;
+                  padding: 17px 20px 17px 40px;
                   border-radius: 0 0 8px 8px;
                   outline: none;
                   font-family: $font-family;
+                  box-sizing: border-box;
+                  cursor: text;
                 }
                 #password-input {
                   position: absolute;
                   color: #bbb;
-                  left: 20px;
-                  right: 12px;
+                  left: 12px;
+                  right: 0;
                   top: 0;
-                  bottom: 3px;
                   text-align: left;
-                  padding: 18px 30px 15px 28px;
+                  padding: 15px 30px 17px 35px;
                   background-image: url(../src/image/img_login_account_icon.png);
                   background-size: 21px 300px;
                   background-repeat: no-repeat;
                   background-position: 0 -93px;
                   font-family: $font-family;
+                  pointer-events: none;
+                  font-size: 16px;
+                  cursor: default;
                 }
               }
             }
@@ -353,6 +361,8 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
                 border-radius: 8px 8px 8px 8px;
                 border: none;
                 font-family: $font-family;
+                outline: none;
+                cursor: pointer;
               }
             }
           }
@@ -496,4 +506,52 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
   background: #f7e5e5;
   text-align: center;
   font-family: $font-family;
+}
+
+.Login_Account_alert {
+  &:before {
+    display: block;
+    content: "";
+    border: 7px solid #db484a;
+    border-color: transparent #db484a transparent transparent;
+    position: absolute;
+    right: -6px;
+    top: 20px;
+  }
+  &:after {
+    content: attr(data-notice);
+    display: block;
+    background: #db484a;
+    color: #fff;
+    position: absolute;
+    top: 2px;
+    right: -116px;
+    padding: 12px 15px;
+    font-size: 16px;
+    border-radius: 5px;
+  }
+}
+
+.Login_PassWord_alert {
+  &:before {
+    display: block;
+    content: "";
+    border: 7px solid #db484a;
+    border-color: transparent #db484a transparent transparent;
+    position: absolute;
+    right: -6px;
+    top: 20px;
+  }
+  &:after {
+    content: attr(data-notice);
+    display: block;
+    background: #db484a;
+    color: #fff;
+    position: absolute;
+    top: 2px;
+    right: -116px;
+    padding: 11px 15px;
+    font-size: 16px;
+    border-radius: 5px;
+  }
 }
