--- a/Vue_SPA/src/scss/gheader.scss
+++ b/Vue_SPA/src/scss/gheader.scss
@@ -225,11 +225,11 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
                         .Account {
                           display: inline-block;
                           position: absolute;
-                          vertical-align: middle;
                           line-height: 22px;
                           margin-left: 6px;
                           font-weight: 500;
                           max-width: 170px;
+                          min-width:50px;
                           color: #49454b;
                           cursor: pointer;
                           left: 40px;
@@ -344,10 +344,10 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
 
       .title-bold-pink {
         display: block;
-        width: initial; //預設 待研究
+        width: initial; 
         font-size: 14px;
         text-align: center;
-        color: #f5548c;
+        color: block;
         font-weight: 700;
         padding-top: 14px;
         padding-bottom: 10px;
@@ -356,6 +356,7 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
       &:hover {
         .title-bold-pink {
           border-bottom: 2px solid #f5548c;
+          color: #f5548c;
           padding-bottom: 10px;
           transition: 0.3s;
         }
