--- a/Vue_SPA/src/scss/gheader.scss
+++ b/Vue_SPA/src/scss/gheader.scss
@@ -253,9 +253,11 @@ $font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC",
                         a {
                           margin-top: 35px;
                           margin-left: -60px;
-
+                          span{
+                            margin-left:5px;
+                          }
                           .badge {
-                            margin-left: 20px;
+                            margin-left: 10px;
                             float: right;
                             padding: 2.5px 5px;
                             border-radius: 8px;
