--- a/Vue_SPA/css/forget.css
+++ b/Vue_SPA/css/forget.css
@@ -9,12 +9,15 @@
   right: 0;
   bottom: 0;
   left: 0;
+  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-align: center;
-      align-items: center;
-  -ms-flex-pack: center;
-      justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: #d8d8d8;
 }
 
@@ -142,7 +145,8 @@
   border-bottom: 1px solid #ccc;
   width: 100%;
   padding: 17px 20px 17px 40px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-size: 14px;
   border: 1px solid #ccc;
   margin-bottom: -1px;
@@ -162,7 +166,8 @@
   right: 12px;
   top: 0;
   bottom: 3px;
-  transform: translate(15px, 0);
+  -webkit-transform: translate(15px, 0);
+          transform: translate(15px, 0);
   padding: 15px 30px 15px 28px;
   text-align: left;
   font-size: 16px;
@@ -181,7 +186,8 @@
   border-bottom: 1px solid #ccc;
   width: 100%;
   padding: 17px 20px 17px 40px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-size: 14px;
   border: 1px solid #ccc;
   margin-bottom: -1px;
@@ -201,7 +207,8 @@
   right: 12px;
   top: 0;
   bottom: 3px;
-  transform: translate(15px, 0);
+  -webkit-transform: translate(15px, 0);
+          transform: translate(15px, 0);
   padding: 15px 30px 15px 28px;
   text-align: left;
   font-size: 16px;
@@ -217,7 +224,8 @@
 
 .login-forget-body .login-forget-outer .login-forget-wrapper-login .login-forget-inner-wrapper .login-forget-upper .div-forget .form-forget .forget-submit {
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 300px;
   margin-left: auto;
   margin-right: auto;
@@ -229,7 +237,8 @@
   padding-right: 40px;
   padding-left: 40px;
   width: 100%;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-weight: 600;
   cursor: pointer;
   font-size: 21px;
