--- a/Vue_SPA/css/login_signup_message.css
+++ b/Vue_SPA/css/login_signup_message.css
@@ -8,6 +8,7 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   display: table;
+  -webkit-transition: opacity 0.3s ease;
   transition: opacity 0.3s ease;
 }
 
@@ -21,7 +22,9 @@
   margin: 0px auto;
   padding: 20px 30px;
   background-color: #fff;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
+  -webkit-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
+          box-shadow: 0 2px 8px rgba(0, 0, 0, 0.33);
+  -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
   border-radius: 20px;
@@ -77,15 +80,19 @@
   color: #fff;
   letter-spacing: 2px;
   border: 2px  #f5548c solid;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", "Heiti TC", "微軟正黑體", "Microsoft JhengHei", "Noto Sans T Chinese", "Droid Sans Fallback", sans-serif;
   line-height: 1 !important;
   cursor: pointer;
 }
 
 .modal-mask .modal-wrapper .modal-container .modal-default-button:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 0.3em #7c1030;
-  transition-duration: 0.15s;
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
+  -webkit-box-shadow: 0 0.3em #7c1030;
+          box-shadow: 0 0.3em #7c1030;
+  -webkit-transition-duration: 0.15s;
+          transition-duration: 0.15s;
 }
 /*# sourceMappingURL=login_signup_message.css.map */
